--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -47,10 +47,10 @@ parts:
     plugin: dump
     override-build: |
       wget https://downloads.storagecraft.com/spx/Ubuntu16.04/storagecraft-repo-latest.deb -O storagecraft-repo-latest.deb
-      sudo dpkg -i storagecraft-repo-latest.deb
-      sudo apt-get update
-      sudo apt-get install spx
-      sudo /usr/bin/gpasswd -a $USER spx
+      dpkg -i storagecraft-repo-latest.deb
+      apt-get update
+      apt-get install spx
+      /usr/bin/gpasswd -a $USER spx
     stage-packages:
       - spx
       - spx-common
