--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -46,13 +46,18 @@ parts:
     source: .
     plugin: dump
     override-build: |
+      apt update
+      apt install wget
       wget https://downloads.storagecraft.com/spx/Ubuntu16.04/storagecraft-repo-latest.deb -O storagecraft-repo-latest.deb
       dpkg -i storagecraft-repo-latest.deb
-      echo 'deb http://downloads.storagecraft.com/spx/Ubuntu16.04/stc/public current main' > /etc/apt/sourcea.list.d/storagecraft-repo.list
       apt update
       apt install spx
       /usr/bin/gpasswd -a $USER spx
     stage-packages:
+      - spx
+      - spx-common
+      - spx-agent
+      - spx-gui
       - libhivex0
       - libcrypto++9v5
       - kpartx
