--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -47,11 +47,11 @@ parts:
     plugin: dump
     override-build: |
       apt update
-      apt install wget
+      apt install wget -y
       wget https://downloads.storagecraft.com/spx/Ubuntu16.04/storagecraft-repo-latest.deb -O storagecraft-repo-latest.deb
       dpkg -i storagecraft-repo-latest.deb
       apt update
-      apt install spx
+      apt install spx -y
       /usr/bin/gpasswd -a $USER spx
     stage-packages:
       - wget
